2007-11-30  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-08
	* bugfix: modify FUResource to produce warning when fedid is 
	not in range, generate error message indicating duplicated fedids

2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-07
	* bugfix: lost events (events the total size of which exceed the
	size of a single raw shm cell) are correctly handled now.

2007-09-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-06
	* add parameter 'reasonForFailed'
	* FUResourceTable: throw an exception if the creation of the
	shared memory segment fails
	* therefore, FUResourceBroker now correctly goes to 'FAILED' state
	in this scenario

2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-07-05
	* adjust to new XMAS-ready version of Utilties/WebGUI

2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-07-04
	* FUResource.cc uses board_sense to avoid crash when running with
	fake data (inconsistent GTFE block) 

	
2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V00-07-03
	* Modified FUResource to set event number using 32-bit trigger
	no. from GTP Daq record 
	
2007-06-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-07-02
	* First pass modifications for xdaq 3.9 (mainly include paths of
	xdaq headers) 
	
2007-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-01
	* yet another bug fix which prevented a clean stop from time to
	time. But I am getting there ...

2007-05-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-07-00
	* requires EventFilter/ShmBuffer V00-04-00
	* add std::queue<uint> FUShmResourceTable::freeResourceIds_;
	FUShmResourceTable::allocateResource draws an id from it, but
	doesn't call FUResource::allocate(cell) yet; only upon receiving
	the first data msg from the BU will allocate be called and thus
	the shm lock be taken. Thus, the pending requests block maximally